Fix: Layout issues

--- a/src/css/user_page/gameView.css
+++ b/src/css/user_page/gameView.css
@@ -44,80 +44,78 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    pointer-events: none; 
+    pointer-events: none;
   }
-  
+
+
 .game-cont{
     display: flex;
-    width: 90vw;
-    opacity: 1;
-    height: 100%;
-    /* position: absolute; */
-    justify-content: space-evenly;
-    /* overflow-y: scroll;
-    overflow-x: hidden; */
-    align-items: center;
+    justify-content: space-between;
     gap: 1vw;
+    
+    width: fit-content;
+    height: 100%;
+    width: 100%;
+
+    opacity: 1;
+
+}
+.game_title{
+  padding: 1vh 0vw;
 }
 .game-vieu{
     display: flex;
-    gap: 1vw;
-    color: aliceblue;
-    width: 60%;
-    height: 100%;
-    /* padding: 1.5em; */
-    /* background-color: darkred; */
     flex-direction: column;
+    justify-content: center;
     gap: 1vh;
 
-}
-.game-info{
-    width: 40%;
-    
-    /* margin-right: 5%; */
-    /* background-color: darkgreen; */
+    color: aliceblue;
 
+    width: 50vw;
+    height: 100%;
+    overflow: hidden;
+}
+.game-vieu img{
+  border-radius: 1vw;
 }
 .game-info {
-  background-color: #240940;
-  border-radius: 1em;
-  padding: 2vh;
-  overflow: hidden;
+  background-color: #2c2c3e;
   color: #ffffff;
-  line-height: 1.4;
+
+  border-radius: 1em;
   text-align: left;
+  line-height: 1.4;
+  
   display: flex;
   flex-direction: column;
   gap: 1vh;
-    /* background-color: darkred; */
-    flex-direction: column;
+  
+  height: 100%;
+  width: 30vw;
+  padding: 1vw;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
 }
-.game-info{
-    height: 60%;
-    padding: 1vw;
-    /* background-color: darkgreen; */
-    
-  }
-  .game-info {
-    background-color: #2c2c3e;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: left;
-  }
+
 
 .big-screenshot{
     display: flex;
     overflow-x: scroll;
     overflow-y: hidden;
     width: 100%;
+    height: fit-content;
     gap: 1vw;    
-    
-  }
+}
+.main_screenshot{
+  height: 80%;
+}
   .big-screenshot img{
     border: .5vw solid transparent;
     cursor: pointer;
-    width: 20%;
     transition: all ease-in-out .5s;
-    
+    height: 20vh;
+    object-fit: cover; 
+    border-radius: 1em;
   }
   .big-screenshot img:hover{
     border-color: aliceblue;
@@ -148,11 +146,7 @@
     
   }
   
-  .game-vieu .big-screenshot img {
-    width: 20%;
-    object-fit: cover; 
-    border-radius: 1em;
-}
+
 
  
   .bigcount {
@@ -164,7 +158,6 @@
     flex-direction: column;
     position: relative;
     color: #ffffff;
-    gap: 2vh;
   }
   
 
